Create requests menu page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,6 +52,19 @@ label.newPassword=New password
 label.confirmNewPassword=Confirm new password
 label.forgotPassword=Forgot password?
 label.resetPasswordInfo=Enter your email or login. We'll email instructions on how to reset your password.
+label.requests=Requests
+label.noRequests=You have no requests
+label.creatingDate=Creating date
+label.processingDate=Processing date
+label.description=Description
+label.status=Status
+label.cardUnlockRequest=Card unlock request
+label.accountOpeningRequest=Opening a card to an existing account
+label.cardIssueToExistingAccount=Card issue to existing account
+label.cardIssueWithOpeningNewAccount=Card issue with opening new account
+label.inProcessing=In processing
+label.completed=Completed
+label.rejected=Rejected
 
 
 text.safeUsePaymentTitle=Recommendations for the safe use of payment cards:
@@ -85,7 +98,6 @@ text.accountDeletionConfirmation=Are you sure you want to delete your account?
 *Status1015*=New password should not match the old password
 *Status1016*=User with specified login and email does not exist
 *Status1017*=Password successfully reset. Check your email
-
-*Status2000*=No available currencies , try again later
+*Status1018*=No available currencies , try again later
 
 
