--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -52,6 +52,19 @@ label.newPassword=Новый пароль
 label.confirmNewPassword=Повторите новый пароль
 label.forgotPassword=Забыли пароль?
 label.resetPasswordInfo=Введите адрес электронной почты и логин. Мы вышлем инструкции по восстановлению пароля.
+label.requests=Заявки
+label.noRequests=Запросы отсутствуют
+label.creatingDate=Дата создания
+label.processingDate=Дата обработки
+label.description=Описание
+label.status=Статус
+label.cardUnlockRequest=Заявка на разблокировку карты
+label.accountOpeningRequest=Открытие счёта
+label.cardIssueToExistingAccount=Выпуск карты к существующему счёту
+label.cardIssueWithOpeningNewAccount=Выпуск карты с открытием нового счёта
+label.inProcessing=Обрабатывается
+label.completed=Выполнен
+label.rejected=Отклонён
 
 
 text.safeUsePaymentTitle=Рекомендации по безопасному использованию платежных карт:
@@ -85,6 +98,6 @@ text.accountDeletionConfirmation=Вы уверены, что хотите уда
 *Status1015*=Новый пароль не должен совпадать с старым паролем
 *Status1016*=Пользователя с указанным логином и адресом электронной почты не существует
 *Status1017*=Пароль успешно обновлен. Проверьте свою электронную почту
+*Status1018*=Нет доступных валют, попробуйте позже
 
-*Status2000*=Нет доступных валют, попробуйте позже
 
