Add result message to mainMenuCurrencies.jsp page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -65,6 +65,7 @@ label.cardIssueWithOpeningNewAccount=Card issue with opening new account
 label.inProcessing=In processing
 label.completed=Completed
 label.rejected=Rejected
+label.noAvailableCurrencies=No available currencies , try again later
 
 
 text.safeUsePaymentTitle=Recommendations for the safe use of payment cards:
@@ -98,6 +99,5 @@ text.accountDeletionConfirmation=Are you sure you want to delete your account?
 *Status1015*=New password should not match the old password
 *Status1016*=User with specified login and email does not exist
 *Status1017*=Password successfully reset. Check your email
-*Status1018*=No available currencies , try again later
 
 
