--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -65,6 +65,7 @@ label.cardIssueWithOpeningNewAccount=Выпуск карты с открытие
 label.inProcessing=Обрабатывается
 label.completed=Выполнен
 label.rejected=Отклонён
+label.noAvailableCurrencies=Нет доступных валют, попробуйте позже
 
 
 text.safeUsePaymentTitle=Рекомендации по безопасному использованию платежных карт:
@@ -98,6 +99,6 @@ text.accountDeletionConfirmation=Вы уверены, что хотите уда
 *Status1015*=Новый пароль не должен совпадать с старым паролем
 *Status1016*=Пользователя с указанным логином и адресом электронной почты не существует
 *Status1017*=Пароль успешно обновлен. Проверьте свою электронную почту
-*Status1018*=Нет доступных валют, попробуйте позже
+
 
 
