Add mainMenuForCreatingRequests page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -29,6 +29,10 @@ button.changeSurname=Change Surname
 button.deleteAccount=Delete account
 button.changePassword=Change password
 button.cancel=Cancel
+button.openNewAccount=Open new account
+button.openNewCardToExistingAccount=Open new card to existing account
+button.openNewCard=Open new card
+button.submitRequest=Submit request
 
 
 label.username=\u0020Username
@@ -66,6 +70,15 @@ label.inProcessing=In processing
 label.completed=Completed
 label.rejected=Rejected
 label.noAvailableCurrencies=No available currencies , try again later
+label.chooseRequestType=Choose request type:
+label.chooseCurrency=Choose currency:
+label.openNewAccount=Open new account
+label.openNewCardToExistingAccount=Open new card to existing account
+label.openNewCard=Open new card
+label.chooseCardExpiryDate=Choose card expiry date:
+label.choosePaymentSystem=Choose payment system:
+label.chooseBankAccount:Choose bank account:
+
 
 
 text.safeUsePaymentTitle=Recommendations for the safe use of payment cards:
@@ -99,4 +112,5 @@ text.accountDeletionConfirmation=Are you sure you want to delete your account?
 *Status1015*=New password should not match the old password
 *Status1016*=User with specified login and email does not exist
 *Status1017*=Password successfully reset. Check your email
+*Status1018*=The request was successfully created and sent for processing
 
