--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -29,6 +29,10 @@ button.changeSurname=Изменить Фамилию
 button.deleteAccount=Удалить учетную запись
 button.changePassword=Изменить пароль
 button.cancel=Отмена
+button.openNewAccount=Открыть новый счет
+button.openNewCardToExistingAccount=Открыть новую платежную карту к существующему счёту
+button.openNewCard=Открыть новую платежную карту
+button.submitRequest=Отправить запрос
 
 
 label.username=\u0020Имя пользователя
@@ -66,6 +70,14 @@ label.inProcessing=Обрабатывается
 label.completed=Выполнен
 label.rejected=Отклонён
 label.noAvailableCurrencies=Нет доступных валют, попробуйте позже
+label.chooseRequestType=Выберите тип запроса:
+label.chooseCurrency=Выберите валюту:
+label.openNewAccount=Открыть новый счет
+label.openNewCardToExistingAccount=Открыть новую платежную карту к существующему счёту
+label.openNewCard=Открыть новую платежную карту
+label.chooseCardExpiryDate=Выберите срок действия карты:
+label.choosePaymentSystem=Выберите платежную систему:
+label.chooseBankAccount:Выберите банковский счёт:
 
 
 text.safeUsePaymentTitle=Рекомендации по безопасному использованию платежных карт:
@@ -99,6 +111,7 @@ text.accountDeletionConfirmation=Вы уверены, что хотите уда
 *Status1015*=Новый пароль не должен совпадать с старым паролем
 *Status1016*=Пользователя с указанным логином и адресом электронной почты не существует
 *Status1017*=Пароль успешно обновлен. Проверьте свою электронную почту
+*Status1018*=Запрос успешно создан и отправлен на обработку
 
 
 
