Create admin currencies page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -33,6 +33,14 @@ button.openNewAccount=Open new account
 button.openNewCardToExistingAccount=Open new card to existing account
 button.openNewCard=Open new card
 button.submitRequest=Submit request
+button.updateRates=Update rates
+button.users=Users
+button.findAllUsers=Find all users
+button.block=Block
+button.unlock=Unlock
+button.requests=Requests
+button.reject=Reject
+button.handle=Handle
 
 
 label.username=\u0020Username
@@ -44,7 +52,7 @@ label.russian=Russian
 label.officialExchangeRageAt=Official Exchange Rate at 
 label.currency=Currency
 label.scale=Scale
-label.rate=Rate
+label.rate=Rate    
 label.personalData=Personal data
 label.loginWithColon=Login: 
 label.emailWithColon=Email: 
@@ -78,7 +86,20 @@ label.openNewCard=Open new card
 label.chooseCardExpiryDate=Choose card expiry date:
 label.choosePaymentSystem=Choose payment system:
 label.chooseBankAccount:Choose bank account:
-
+label.updateDate= Update date
+label.login=Login
+label.email=Email 
+label.name=Name
+label.surname=Surname
+label.userNotFound=User not found
+label.usersNotFound=Users not found
+label.listOfUsers=List of users
+label.findUser=Find user
+label.userRequests=User requests
+label.requestsNotFound=User requests not found
+label.findAllUserRequests=Find all user requests
+label.findRequestsOfAllUsers=Find requests of all users
+label.showOnlyRawRequests=Show only raw requests
 
 
 text.safeUsePaymentTitle=Recommendations for the safe use of payment cards:
@@ -92,6 +113,8 @@ text.newPasswordInfo=Password must be at least 6 characters, must contain upperc
 text.requiredField=Required field
 text.accountDeletionConfirmation=Are you sure you want to delete your account?
 
+
+*Status998*=Connection has been timed out, try again later
 *Status999*=Service is temporarily not available, try again later
 
 *Status1000*=Not all fields are filled
@@ -113,4 +136,13 @@ text.accountDeletionConfirmation=Are you sure you want to delete your account?
 *Status1016*=User with specified login and email does not exist
 *Status1017*=Password successfully reset. Check your email
 *Status1018*=The request was successfully created and sent for processing
+*Status1019*=Payment amount must be greater than zero
+*Status1020*=Operation is not available, card is locked
+*Status1021*=Operation is not available, bank account is locked
+*Status1022*=Wrong ccv code
+*Status1023*=Not enough money on the balance to complete the operation
+*Status1024*=Non-existent card number specified
+*Status1025*=Invalid operation, receiver card matches sender card
+*Status1026*=Operation completed successfully
+
 
