--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -33,6 +33,14 @@ button.openNewAccount=Открыть новый счет
 button.openNewCardToExistingAccount=Открыть новую платежную карту к существующему счёту
 button.openNewCard=Открыть новую платежную карту
 button.submitRequest=Отправить запрос
+button.updateRates=Обновить курсы
+button.users=Пользователи
+button.findAllUsers=Найти всех пользователей
+button.block=Заблокировать
+button.unlock=Разблокировать
+button.requests=Запросы
+button.reject=Отклонить
+button.handle=Обработать
 
 
 label.username=\u0020Имя пользователя
@@ -44,7 +52,7 @@ label.russian=Русский
 label.officialExchangeRageAt=Официальный курс на
 label.currency=Наименование валюты
 label.scale=Количество единиц валюты
-label.rate=Курс
+label.rate=Курс    
 label.personalData=Личные данные
 label.loginWithColon=Логин: 
 label.emailWithColon=Адрес электронной почты: 
@@ -78,6 +86,21 @@ label.openNewCard=Открыть новую платежную карту
 label.chooseCardExpiryDate=Выберите срок действия карты:
 label.choosePaymentSystem=Выберите платежную систему:
 label.chooseBankAccount:Выберите банковский счёт:
+label.updateDate= Дата обновления
+label.login=Логин
+label.email=Адрес электронной почты
+label.name=Имя
+label.surname=Фамилия
+label.userNotFound=Пользователь не найден
+label.usersNotFound=Пользователи отсутствуют
+label.listOfUsers=Список пользователей
+label.findUser=Найти пользователя
+label.userRequests=Запросы пользователей
+label.requestsNotFound=Запросы не найдены
+label.findAllUserRequests=Найти все запросы пользователя
+label.findRequestsOfAllUsers=Найти запросы всех пользователей
+label.showOnlyRawRequests=Отображать только необработанные запросы
+
 
 
 text.safeUsePaymentTitle=Рекомендации по безопасному использованию платежных карт:
@@ -91,6 +114,8 @@ text.newPasswordInfo=Пароль должен содержать минимум
 text.requiredField=Заполните это поле
 text.accountDeletionConfirmation=Вы уверены, что хотите удалить аккаунт?
 
+
+*Status998*=Превышено время ожидания запроса, попробуйте позже
 *Status999*=Операция недоступна, попробуйте позже
 
 *Status1000*=Не все поля заполнены
@@ -112,6 +137,15 @@ text.accountDeletionConfirmation=Вы уверены, что хотите уда
 *Status1016*=Пользователя с указанным логином и адресом электронной почты не существует
 *Status1017*=Пароль успешно обновлен. Проверьте свою электронную почту
 *Status1018*=Запрос успешно создан и отправлен на обработку
+*Status1019*=Сумма платежа должна быть больше нуля
+*Status1020*=Операция недоступна, карта заблокирована
+*Status1021*=Операция недоступна, счёт заблокирован
+*Status1022*=Неверный ccv код
+*Status1023*=Недостаточно средств на балансе для совершения операции
+*Status1024*=Указан несуществующий номер карты
+*Status1025*=Невозможно выполнить операцию, номер карты получателя и отправителя совпадают
+*Status1026*=Операция выполнена успешно
+
 
 
 
