Create RejectUserRequest command

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -144,5 +144,5 @@ text.accountDeletionConfirmation=Are you sure you want to delete your account?
 *Status1024*=Non-existent card number specified
 *Status1025*=Invalid operation, receiver card matches sender card
 *Status1026*=Operation completed successfully
-
+*Status1027*=Request has already been processed
 
