--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -145,7 +145,7 @@ text.accountDeletionConfirmation=Вы уверены, что хотите уда
 *Status1024*=Указан несуществующий номер карты
 *Status1025*=Невозможно выполнить операцию, номер карты получателя и отправителя совпадают
 *Status1026*=Операция выполнена успешно
-
+*Status1027*=Заявка уже обработана
 
 
 
