Add CreateRequestOpenNewCard command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -147,7 +147,7 @@ text.accountDeletionConfirmation=Are you sure you want to delete your account?
 *Status1025*=Invalid operation, receiver card matches sender card
 *Status1026*=Operation completed successfully
 *Status1027*=Request has already been processed
-
+*Status1028*=Unable to unlock expired card
 
 
 
