Create admin accountsMenu page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -41,6 +41,9 @@ button.unlock=Unlock
 button.requests=Requests
 button.reject=Reject
 button.handle=Handle
+button.accounts=Accounts
+button.findAllAccounts=Find all accounts
+button.statement=Statement
 
 
 label.username=\u0020Username
@@ -100,6 +103,22 @@ label.requestsNotFound=User requests not found
 label.findAllUserRequests=Find all user requests
 label.findRequestsOfAllUsers=Find requests of all users
 label.showOnlyRawRequests=Show only raw requests
+label.blocked=Blocked
+label.active=Active
+label.userAccounts=User accounts
+label.findAllUserAccounts=Find all user accounts
+label.balance=Balance
+label.accountNumber=Account number
+label.accountsNotFound=Accounts not found
+label.statementFromAccount=Statement from account 
+label.amount=Amount
+label.operationDate=Operation date
+label.operationType=Operation type
+label.writeOff=Write-off
+label.crediting=Crediting
+label.notCompleted=Not completed
+label.noAccountTransactions=No account transactions
+
 
 
 text.safeUsePaymentTitle=Recommendations for the safe use of payment cards:
