--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -41,6 +41,9 @@ button.unlock=Разблокировать
 button.requests=Запросы
 button.reject=Отклонить
 button.handle=Обработать
+button.accounts=Счета
+button.findAllAccounts=Найти все счета
+button.statement=Выписка
 
 
 label.username=\u0020Имя пользователя
@@ -100,6 +103,21 @@ label.requestsNotFound=Запросы не найдены
 label.findAllUserRequests=Найти все запросы пользователя
 label.findRequestsOfAllUsers=Найти запросы всех пользователей
 label.showOnlyRawRequests=Отображать только необработанные запросы
+label.blocked=Заблокирован
+label.active=Активный
+label.userAccounts=Счета пользователей
+label.findAllUserAccounts=Найти все счета пользователя
+label.balance=Баланс
+label.accountNumber=Номер счета
+label.accountsNotFound=Счета отсутствуют
+label.statementFromAccount=Выписка по счету 
+label.amount=Сумма
+label.operationDate=Дата операции
+label.operationType=Тип операции
+label.writeOff=Списание
+label.crediting=Зачисление
+label.notCompleted=Не выполнена
+label.noAccountTransactions=Операции по счету отсутствуют
 
 
 
