--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -44,6 +44,7 @@ button.handle=Обработать
 button.accounts=Счета
 button.findAllAccounts=Найти все счета
 button.statement=Выписка
+button.cards=Карты
 
 
 label.username=\u0020Имя пользователя
@@ -116,8 +117,18 @@ label.operationDate=Дата операции
 label.operationType=Тип операции
 label.writeOff=Списание
 label.crediting=Зачисление
-label.notCompleted=Не выполнена
+label.notCompleted=Не выполнен
 label.noAccountTransactions=Операции по счету отсутствуют
+label.userPaymentCards=Платежные карты пользователей
+label.findUserCards=Найти карты пользователя
+label.findAllPaymentCards=Найти все платежные карты
+label.cardNumber=Номер карты
+label.paymentSystem=Платежная система
+label.expiryDate=Действует до
+label.noCardTransactions=Операции по карте отсутствуют
+label.statementFromCard=Выписка по карте 
+label.cardsNotFound=Карты не найдены
+
 
 
 
