--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,6 +44,7 @@ button.handle=Handle
 button.accounts=Accounts
 button.findAllAccounts=Find all accounts
 button.statement=Statement
+button.cards=Cards
 
 
 label.username=\u0020Username
@@ -118,6 +119,16 @@ label.writeOff=Write-off
 label.crediting=Crediting
 label.notCompleted=Not completed
 label.noAccountTransactions=No account transactions
+label.userPaymentCards=User payment cards
+label.findUserCards=Find user cards
+label.findAllPaymentCards=Find all payment cards
+label.cardNumber=Card number
+label.paymentSystem=Payment system
+label.expiryDate=Expiry date
+label.noCardTransactions=No payment card transactions
+label.statementFromCard=Statement from card 
+label.cardsNotFound=Cards not found
+
 
 
 
