Add email text to messages.properties

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -131,7 +131,16 @@ label.cardsNotFound=Cards not found
 
 
 
+subject.requestProcessedSuccessfully=Request processed successfully
+subject.registrationCompleted=Registration completed successfully
+subject.passwordRecovery=Password recovery
 
+text.accountOpeningRequestProcessed=Account opening request processed. Account number %s.
+text.cardOpeningToExistingAccountRequestProcessed=Card opening request to %s account processed. Card number %s. CCV code %s.
+text.cardOpeningRequestProcessed=Card opening request processed. Card number %s. CCV code %s. 
+text.cardUnlockRequestProcessed=Request to unlock card %s processed.
+text.registrationText=Thanks for registering at PaymentSystem. Your login %s.
+text.resetPasswordText=Password changed successfully. New password %s
 text.safeUsePaymentTitle=Recommendations for the safe use of payment cards:
 text.safeUsePayment1=- Do not answer messages, letters or phone calls with request to send a password and other confidential data.
 text.safeUsePayment2=- If the card is lost or stolen block the card.
