--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -131,7 +131,17 @@ label.cardsNotFound=Карты не найдены
 
 
 
+subject.requestProcessedSuccessfully=Заявка успешно обработана
+subject.registrationCompleted=Регистрация завершена успешно
+subject.passwordRecovery=Восстановление пароля
 
+
+text.accountOpeningRequestProcessed=Заявка на открытие счета обработана. Номер счета %s.
+text.cardOpeningToExistingAccountRequestProcessed=Заявка на открытие карты к счету %s обработана. Номер карты %s. CCV код %s.
+text.cardOpeningRequestProcessed=Заявка на открытие карты обработана. Номер карты %s. CCV код %s.
+text.cardUnlockRequestProcessed=Заявка на разблокировку карты %s обработана.
+text.registrationText=Спасибо за регистрацию на PaymentSystem. Ваш логин %s.
+text.resetPasswordText=Пароль успешно изменён. Новый пароль %s
 text.safeUsePaymentTitle=Рекомендации по безопасному использованию платежных карт:
 text.safeUsePayment1=- Не отвечайте на сообщения, письма или телефонные звонки, с просьбой выслать пароль и другие конфиденциальные данные.
 text.safeUsePayment2=- Если карта утрачена (украдена) либо постороннему лицу стали известны ее реквизиты - заблокируйте карту.
