Create mainMenuUserAccounts page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,7 +46,12 @@ button.accounts=Accounts
 button.findAllAccounts=Find all accounts
 button.statement=Statement
 button.cards=Cards
-
+button.operations=Operations
+button.transferToCard=Transfer to card
+button.rechargeCard=Recharge card
+button.makePayment=Make payment
+button.confirmPayment=Submit payment
+button.requestToUnlockCard=Request to unlock card
 
 
 
@@ -92,7 +97,7 @@ label.openNewCardToExistingAccount=Open new card to existing account
 label.openNewCard=Open new card
 label.chooseCardExpiryDate=Choose card expiry date:
 label.choosePaymentSystem=Choose payment system:
-label.chooseBankAccount:Choose bank account:
+label.chooseBankAccount=Choose bank account:
 label.updateDate= Update date
 label.login=Login
 label.email=Email 
@@ -131,6 +136,20 @@ label.expiryDate=Expiry date
 label.noCardTransactions=No payment card transactions
 label.statementFromCard=Statement from card 
 label.cardsNotFound=Cards not found
+label.myAccounts=My accounts
+label.myCards=My cards
+label.cardOperations=Card operations
+label.cardInformation=Card information
+label.сardExpiry=Card expiry:
+label.CVCCode=CVC code
+label.paymentPurpose=Payment purpose
+label.cardPayment=Card payment
+label.receiverCardNumber=Receiver card number
+label.transferFromCard=Transfer from card
+label.requestToUnlockCard=Card unlock request
+label.chooseCardToUnlock=Choose card to unlock:
+
+
 
 
 subject.requestProcessedSuccessfully=Request processed successfully
@@ -138,8 +157,8 @@ subject.registrationCompleted=Registration completed successfully
 subject.passwordRecovery=Password recovery
 
 text.accountOpeningRequestProcessed=Account opening request processed. Account number %s.
-text.cardOpeningToExistingAccountRequestProcessed=Card opening request to %s account processed. Card number %s. CCV code %s.
-text.cardOpeningRequestProcessed=Card opening request processed. Card number %s. CCV code %s. 
+text.cardOpeningToExistingAccountRequestProcessed=Card opening request to %s account processed. Card number %s. CVC code %s.
+text.cardOpeningRequestProcessed=Card opening request processed. Card number %s. CVC code %s. 
 text.cardUnlockRequestProcessed=Request to unlock card %s processed.
 text.registrationText=Thanks for registering at PaymentSystem. Your login %s.
 text.resetPasswordText=Password changed successfully. New password %s
@@ -153,6 +172,10 @@ text.passwordInfo=Password must be at least 6 characters, must contain uppercase
 text.newPasswordInfo=Password must be at least 6 characters, must contain uppercase, lowercase letters, numbers and special character. New password should not match the old 
 text.requiredField=Required field
 text.accountDeletionConfirmation=Are you sure you want to delete your account?
+text.cardLockConfirmation=Are you sure you want to lock your card?
+text.enterValidCVCCode=Enter valid CVC code
+text.enterValidAmount=Enter positive amount, use as a decimal separator .
+text.enterValidReceiverCardNumber=Enter the 16-digit card number of the recipient
 
 
 *Status998*=Connection has been timed out, try again later
@@ -180,7 +203,7 @@ text.accountDeletionConfirmation=Are you sure you want to delete your account?
 *Status1019*=Payment amount must be greater than zero
 *Status1020*=Operation is not available, card is locked
 *Status1021*=Operation is not available, bank account is locked
-*Status1022*=Wrong ccv code
+*Status1022*=Wrong CVC code
 *Status1023*=Not enough money on the balance to complete the operation
 *Status1024*=Non-existent card number specified
 *Status1025*=Invalid operation, receiver card matches sender card
