--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -45,6 +45,13 @@ button.accounts=Счета
 button.findAllAccounts=Найти все счета
 button.statement=Выписка
 button.cards=Карты
+button.operations=Операции
+button.transferToCard=Перевод на карту
+button.rechargeCard=Пополнить карту
+button.makePayment=Совершить платеж
+button.confirmPayment=Оплатить
+button.requestToUnlockCard=Заявка на разблокировку карты
+
 
 
 label.username=\u0020Имя пользователя
@@ -89,7 +96,7 @@ label.openNewCardToExistingAccount=Открыть новую платежную 
 label.openNewCard=Открыть новую платежную карту
 label.chooseCardExpiryDate=Выберите срок действия карты:
 label.choosePaymentSystem=Выберите платежную систему:
-label.chooseBankAccount:Выберите банковский счёт:
+label.chooseBankAccount=Выберите банковский счёт:
 label.updateDate= Дата обновления
 label.login=Логин
 label.email=Адрес электронной почты
@@ -128,6 +135,20 @@ label.expiryDate=Действует до
 label.noCardTransactions=Операции по карте отсутствуют
 label.statementFromCard=Выписка по карте 
 label.cardsNotFound=Карты не найдены
+label.myAccounts=Мои счета
+label.myCards=Мои карты
+label.cardOperations=Операции по карте
+label.cardInformation=Информация по карте
+label.сardExpiry=Срок действия:
+label.CVCCode=CVC код
+label.paymentPurpose=Назначение платежа
+label.cardPayment=Платеж по карте
+label.receiverCardNumber=Номер карты получателя
+label.transferFromCard=Перевод с карты
+label.requestToUnlockCard=Заявка на разблокировку карты
+label.chooseCardToUnlock=Выберите карту для разблокировки:
+
+
 
 
 
@@ -137,8 +158,8 @@ subject.passwordRecovery=Восстановление пароля
 
 
 text.accountOpeningRequestProcessed=Заявка на открытие счета обработана. Номер счета %s.
-text.cardOpeningToExistingAccountRequestProcessed=Заявка на открытие карты к счету %s обработана. Номер карты %s. CCV код %s.
-text.cardOpeningRequestProcessed=Заявка на открытие карты обработана. Номер карты %s. CCV код %s.
+text.cardOpeningToExistingAccountRequestProcessed=Заявка на открытие карты к счету %s обработана. Номер карты %s. CVC код %s.
+text.cardOpeningRequestProcessed=Заявка на открытие карты обработана. Номер карты %s. CVC код %s.
 text.cardUnlockRequestProcessed=Заявка на разблокировку карты %s обработана.
 text.registrationText=Спасибо за регистрацию на PaymentSystem. Ваш логин %s.
 text.resetPasswordText=Пароль успешно изменён. Новый пароль %s
@@ -152,6 +173,10 @@ text.passwordInfo=Пароль должен содержать минимум 6 
 text.newPasswordInfo=Пароль должен содержать минимум 6 символов, букву в верхнем регистре, нижнем регистре, хотя бы одну цифру и любой специальный символ, пробелы не допускаются. Новый пароль не должен совпадать с старым паролем
 text.requiredField=Заполните это поле
 text.accountDeletionConfirmation=Вы уверены, что хотите удалить аккаунт?
+text.cardLockConfirmation=Вы уверены, что хотите заблокировать карту?
+text.enterValidCVCCode=Введите валидный CVC код
+text.enterValidAmount=Введите положительную сумму, в качестве десятичного разделителя используйте .
+text.enterValidReceiverCardNumber=Введите 16-значный номер карты получателя
 
 
 *Status998*=Превышено время ожидания запроса, попробуйте позже
@@ -179,7 +204,7 @@ text.accountDeletionConfirmation=Вы уверены, что хотите уда
 *Status1019*=Сумма платежа должна быть больше нуля
 *Status1020*=Операция недоступна, карта заблокирована
 *Status1021*=Операция недоступна, счёт заблокирован
-*Status1022*=Неверный ccv код
+*Status1022*=Неверный CVC код
 *Status1023*=Недостаточно средств на балансе для совершения операции
 *Status1024*=Указан несуществующий номер карты
 *Status1025*=Невозможно выполнить операцию, номер карты получателя и отправителя совпадают
