Create contactUs page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ title.homePage=Home page
 title.registration=Registration
 title.restorePassword=Restore password
 title.onlineBanking=Online Banking
+title.contactUs=Contact Us
 
 
 button.language=Language
@@ -52,7 +53,7 @@ button.rechargeCard=Recharge card
 button.makePayment=Make payment
 button.confirmPayment=Submit payment
 button.requestToUnlockCard=Request to unlock card
-
+button.submit=Submit
 
 
 label.username=\u0020Username
@@ -148,7 +149,8 @@ label.receiverCardNumber=Receiver card number
 label.transferFromCard=Transfer from card
 label.requestToUnlockCard=Card unlock request
 label.chooseCardToUnlock=Choose card to unlock:
-
+label.contactUs=Contact Us
+label.message=Message
 
 
 
@@ -176,6 +178,9 @@ text.cardLockConfirmation=Are you sure you want to lock your card?
 text.enterValidCVCCode=Enter valid CVC code
 text.enterValidAmount=Enter positive amount, use as a decimal separator .
 text.enterValidReceiverCardNumber=Enter the 16-digit card number of the recipient
+text.contactUs=Got a question? Send a message and we'll respond as soon as possible.
+text.contactUsMessage=User %s. Email %s. Send message: %s
+text.messageSentSuccessfully=Message sent successfully
 
 
 *Status998*=Connection has been timed out, try again later
@@ -210,7 +215,7 @@ text.enterValidReceiverCardNumber=Enter the 16-digit card number of the recipien
 *Status1026*=Operation completed successfully
 *Status1027*=Request has already been processed
 *Status1028*=Unable to unlock expired card
-
+*Status1029*=Message must be not blank
 
 
 
